# gstplayer

./: README.md
reactjs/: package-lock.json  package.json
reactjs/src/: App.js
rust/: Cargo.toml
rust/src/: main.rs
src/gstmodule/: gstmanager.rs
